<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_InternalPowerSupply_Get" Id="{eaf25a08-91cf-4715-bdcd-ed59ea92cc2b}">
    <Declaration><![CDATA[TYPE ST_InternalPowerSupply_Get :
STRUCT
	b_24VdcAvailable	:	BOOL;
	b_HVDCAvailable		:	BOOL;
	b_400VACAvailable	:	BOOL;
	
	UPS				:	ST_UPSGet;	
	
	Events			:	st_InternalPowerSupply_Events;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>