<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_InternalPowersupply_set" Id="{3cc34f34-e605-406e-a41d-4a4bf411f997}">
    <Declaration><![CDATA[TYPE ST_InternalPowersupply_set :
STRUCT
	CoolingSystemPowerDemand	:	st_PowerDemand;
	PowerStackPowerDemand		:	st_PowerDemand;	
	UPSPowerDemand				:	st_PowerDemand;
	InternalPowerDemand			:	st_PowerDemand;
	
	b_GeneralPowerEnable			: 	BOOL 	:= FALSE;	//?
	
	b_InternalBusbarACAvailable		:	BOOL	:=	FALSE;
	
	b_ShutdownUPS		:	BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>